Modify index.html tittle

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/styles.css">
   <script src="./js/index.js" defer type="module"></script>
-  <title>Alura encriptador</title>
+  <title>Alura encriptador a</title>
 </head>
 
 <body> 
